--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -1,11 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".CalculatorActivity">
-
-
+    android:paddingBottom="@dimen/activity_vertical_margin">
+    
+    <fragment
+        android:id="@+id/display_fragment"
+        android:name="com.bromancelabs.calclab.fragments.DisplayFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    
+    <fragment
+        android:id="@+id/buttons_fragment"
+        android:name="com.bromancelabs.calclab.fragments.ButtonsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/display_fragment"/>
 
 </RelativeLayout>
