--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--DisplayFragment-->
+    <dimen name="display_paddingTop">20dp</dimen>
+    <dimen name="display_paddingBottom">20dp</dimen>
+    <dimen name="display_textSize">40sp</dimen>
+
+    <!--ButtonsFragment-->
+    <dimen name="buttons_width">60dp</dimen>
+    <dimen name="buttons_height">60dp</dimen>
+    <dimen name="buttons_margin">5dp</dimen>
+    <dimen name="button_zero_width">130dp</dimen>
+    <dimen name="button_clear_width">200dp</dimen>
+
 </resources>
