--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="nearly_black">#313131</color>
+    <color name="brown">#876D13</color>
+    <color name="green">#668113</color>
+    <color name="red">#B0281A</color>
+    <color name="blue">#268474</color>
 </resources>
