--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,7 @@
     </style>
 
     <style name="Numbers" parent="BaseButton">
-        <item name="android:background">@color/brown</item>
+        <item name="android:background">@drawable/number_button</item>
     </style>
 
     <style name="Zero" parent="Numbers">
@@ -40,16 +40,16 @@
     </style>
 
     <style name="Operators" parent="BaseButton">
-        <item name="android:background">@color/green</item>
+        <item name="android:background">@drawable/operator_button</item>
     </style>
 
     <style name="Clear" parent="BaseButton">
-        <item name="android:background">@color/red</item>
+        <item name="android:background">@drawable/clear_button</item>
     </style>
 
     <style name="Equal" parent="BaseButton">
         <item name="android:layout_width">@dimen/button_equal_width</item>
-        <item name="android:background">@color/blue</item>
+        <item name="android:background">@drawable/equal_button</item>
     </style>
 
 </resources>
